--- a/research.html
+++ b/research.html
@@ -10,111 +10,120 @@
             font-family: 'Yu Mincho', serif;
             margin: 0;
             padding: 0;
-            background-color: #fff; /* Set base background color to white */
-            color: #333; /* Dark gray text color */
-            max-width: 1200px; /* Set max-width for the content */
-            min-width: 600px; /* Set min-width for the content */
+            background-color: #f8f8f8; /* Light background */
+            color: #333;
+            max-width: 1200px;
+            min-width: 600px;
             margin-left: auto;
             margin-right: auto;
+            font-size: 18px;
+            line-height: 1.6;
         }
 
-header {
-    position: relative;
-    background-image: url('image3.jpg'); /* Background image for the header */
-    background-position: center bottom; /* Center the background image horizontally and vertically */
-    background-attachment: fixed; /* Fixed background position */
-    background-size: cover; /* Cover the entire header */
-    color: #333; /* Dark gray text color */
-    padding: 1em;
-    text-align: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Subtle shadow effect */
-}
+        header {
+            position: relative;
+            background-image: url('image3.jpg');
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: contain;
+            color: #333;
+            padding: 2em 0;
+            text-align: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            height: 300px;
+        }
 
-header::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(255, 255, 255, 0.7); /* Set the background color with alpha (transparency) */
-}
+        header::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.7);
+        }
 
-header h1, header p {
-    position: relative;
-    z-index: 1;
-    /* Set the z-index to place the text above the ::after overlay */
-}
+        header h1, header p {
+            position: relative;
+            z-index: 1;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+        }
 
+        header h1 {
+            font-size: 2.8em;
+        }
 
         header p {
-            font-weight: bold; /* Make the subtitle bold */
+            font-weight: bold;
+            font-size: 1.3em;
         }
 
         nav {
-            background-color: #99b3b3; /* Darker pale teal navigation background color */
+            background-color: #99b3b3;
             overflow: hidden;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow effect */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
 
         nav a {
-            float: left;
-            display: block;
+            display: inline-block;
             color: #333;
             text-align: center;
-            padding: 16px 20px; /* Adjusted padding */
+            padding: 16px 20px;
             text-decoration: none;
-            transition: background-color 0.3s; /* Smooth color transition on hover */
+            transition: background-color 0.3s;
         }
 
         nav a:hover {
-            background-color: #cce5e5; /* Hover color for navigation links */
+            background-color: #cce5e5;
         }
 
         section {
-            padding: 20px;
-            margin: 20px auto; /* Center the section */
-            background-color: #cce5e5; /* Lighter teal section background color */
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1); /* Light shadow effect */
+            padding: 30px;
+            margin: 30px auto;
+            background-color: #fff;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         section h2 {
-            color: #333; /* Dark gray section title color */
+            color: #333;
+            font-size: 2.2em;
+            margin-bottom: 20px;
         }
 
         .project {
             margin-bottom: 20px;
-            padding: 20px;
-            background-color: #cce5e5; /* Lighter teal project background color */
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1); /* Light shadow effect */
+            padding: 30px;
+            background-color: #fff;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         .project h3 {
-            color: #333; /* Dark gray project title color */
+            color: #333;
         }
 
         .project p {
-            color: #555; /* Dark gray text color for projects */
-            font-size: 16px; /* Make the text slightly larger */
+            color: #555;
+            font-size: 18px;
+            line-height: 1.6;
         }
 
         .project a {
-            color: #333;
+            color: #007bff;
             text-decoration: none;
             font-weight: bold;
-            transition: color 0.3s; /* Smooth color transition on hover */
         }
 
         .project a:hover {
-            color: #e6f5f5; /* Hover color for project links */
+            text-decoration: underline;
         }
 
         footer {
-            background-color: #99b3b3; /* Darker pale teal footer background color */
+            background-color: #99b3b3;
             color: #333;
-            padding: 0.5em; /* Smaller footer padding */
+            padding: 1em;
             text-align: center;
             position: fixed;
             bottom: 0;
@@ -131,30 +140,28 @@ header h1, header p {
     </header>
 
     <nav>
-        <a href="index.html">Home</a> <!-- Link back to the main page -->
+        <a href="index.html" style="font-size: 1.1em;">Home</a>
     </nav>
 
-    <div class="project" id="project1">
-        <p><b><a href="https://www.dropbox.com/s/z0mejllpjx3ewb3/Kendall%20-%20Blood%20Runs%20Thicker%20than%20Water_DropBox.pdf?dl=0">Blood Runs Thicker Than Water: Ancestral Ties to Slavery and Ingroup Defensiveness</a></b> (under review) <br>
-        <p>This survey experiment focuses on how individuals react to information about ancestral involvement in the slave trade, demonstrating how the invocation of familial identity when engaging with ‘uncomfortable’ histories can help to reduce backlash and inter-group prejudice.</p>
-    </div>
+    <section>
+        <div class="project" id="project1">
+            <p><b><a href="https://www.dropbox.com/s/z0mejllpjx3ewb3/Kendall%20-%20Blood%20Runs%20Thicker%20than%20Water_DropBox.pdf?dl=0">Blood Runs Thicker Than Water: Ancestral Ties to Slavery and Ingroup Defensiveness</a></b> (under review) <br>
+                This survey experiment focuses on how individuals react to information about ancestral involvement in the slave trade, demonstrating how the invocation of familial identity when engaging with ‘uncomfortable’ histories can help to reduce backlash and inter-group prejudice.</p>
+        </div>
 
-    <div class="project" id="project2">
-        <p><b><a href="https://www.dropbox.com/scl/fi/tcprlouu2t1hcd8l810pd/Kendall-We-Could-Have-Been-Worse_DropBox.pdf?dl=0" target="_blank">
-    We Could Have Been Worse: Competitive Innocence and Defensive Memory Among Perpetrator Groups
-</a></b> (R&R) <br>
-        <p>In this survey experiment, I test the implications of rhetorical appeals to ‘worse’ cases used by members of perpetrator groups to legitimise their group’s history. I find that such defensive strategies not only enable participants to avoid confronting ‘uncomfortable’ histories but actively increase prejudice towards victimized outgroups.</p>
-    </div>
+        <div class="project" id="project2">
+            <p><b><a href="https://www.dropbox.com/scl/fi/tcprlouu2t1hcd8l810pd/Kendall-We-Could-Have-Been-Worse_DropBox.pdf?dl=0" target="_blank">
+                    We Could Have Been Worse: Competitive Innocence and Defensive Memory Among Perpetrator Groups
+                </a></b> (R&R) <br>
+                In this survey experiment, I test the implications of rhetorical appeals to ‘worse’ cases used by members of perpetrator groups to legitimise their group’s history. I find that such defensive strategies not only enable participants to avoid confronting ‘uncomfortable’ histories but actively increase prejudice towards victimized outgroups.</p>
+        </div>
 
-
-            <div class="project" id="project3">
-        <p><b>Six Degrees of Slavery: Elite Persistence and Slave-Ownership in Britain</b> (with Theresa Gessler)  <br>
-<p>We use embedded Wikipedia data to develop a novel computational measure of social proximity between individuals, and aggregate this over parliamentary periods in order to gauge how ties to slavery how persisted over time. Our analysis demonstrates how elite networks with dynastic connections to
-slavery persisted well into the 20th and 21st Centuries. </p>
-    </div>
-
+        <div class="project" id="project3">
+            <p><b>Six Degrees of Slavery: Elite Persistence and Slave-Ownership in Britain</b> (with Theresa Gessler)<br>
+                We use embedded Wikipedia data to develop a novel computational measure of social proximity between individuals, and aggregate this over parliamentary periods in order to gauge how ties to slavery how persisted over time. Our analysis demonstrates how elite networks with dynastic connections to slavery persisted well into the 20th and 21st Centuries.</p>
+        </div>
+    </section>
 
 </body>
 
 </html>
-
